--- a/css/style.css
+++ b/css/style.css
@@ -361,12 +361,12 @@ body {
     padding-top: 34%;
 }
 
-.application {
+.order {
     background: url(../img/application.jpg) 0 0/cover fixed;
     padding: 40px 0;
 }
 
-.application-content {
+.order-content {
     margin: 0 0 0 auto;
     background: #fff;
     max-width: 568px;
@@ -375,38 +375,38 @@ body {
     text-align: left;
 }
 
-.application-title {
+.order-title {
     padding: 0 0 23px 0;
     font-size: 25px;
 }
 
-.application-title span {
+.order-title span {
     color: #0C2443;
 }
 
-.application-subtitle {
+.order-subtitle {
     font-size: 16px;
 }
 
-form {
+#order-form {
     display: flex;
     flex-direction: column;
     gap: 15px;
     padding: 29px 78px 0 0;
 }
 
-form p {
+.field-wrapper {
     position: relative;
 }
 
-.input, textarea {
+.field {
     border-radius: 7px;
     border: 1px solid #969292;
     width: 100%;
     padding: 14px 0 14px 34px;
 }
 
-.input:focus, textarea:focus {
+.field:focus {
     border: 1px solid #000;
 }
 
@@ -426,13 +426,14 @@ form div {
 
 textarea {
     height: 153px;
+    resize: vertical;
 }
 
-.input.request {
+.field.request {
     border-color: red;
 }
 
-form p.request::after, form div p.request::after{
+.field-wrapper.request::after, #order-form div p.request::after{
     content: "Заполните это поле";
     color: red;
     font-size: 8px;
@@ -441,7 +442,7 @@ form p.request::after, form div p.request::after{
     left: 0;
 }
 
-form p button {
+#order-form p button {
     margin: 14px 0 0 0;
     padding: 20px 52px;
     border-radius: 10px;
@@ -450,7 +451,7 @@ form p button {
     color: #fff;
 }
 
-form p button:active {
+#order-form p button:active {
     opacity: 0.8;
 }
 
@@ -649,7 +650,7 @@ form p button:active {
     pointer-events: all;
 }
 
-.accept {
+.notification {
     background: #fff;
     box-shadow: #4F637E 0 0 3px 3px;
     border-radius: 50%;
@@ -665,11 +666,11 @@ form p button:active {
     height: 60%;
 }
 
-.accept p {
+.notification-text {
     font-size: 26px;
 }
 
-.accept-button {
+.notification-button {
     padding: 20px 0;
     width: 20%;
     border-radius: 10px;
@@ -680,11 +681,11 @@ form p button:active {
     line-height: 1;
 }
 
-.accept-button:hover, .accept-button:hover a {
+.notification-button:hover, .notification-button:hover a {
     background: rgb(118, 215, 133);
     color: #fff;
 }
-.accept-button:active, .accept-button:active a {
+.notification-button:active, .notification-button:active a {
     background: rgba(12, 36, 67, 0.9);
     color: #fff;
 }
@@ -783,16 +784,16 @@ form p button:active {
     .goods-name {
         font-size: 16px;
     }
-    .application-content {
+    .order-content {
         margin: 0;
     }
-    form {
+    #order-form {
         padding-right: 0;
     }
-    .application .container {
+    .order .container {
         padding: 0 15px;
     }
-    .application-title {
+    .order-title {
         font-size: 20px;
     }
     .footer-content {
